--- a/research.html
+++ b/research.html
@@ -31,6 +31,7 @@ MathJax.Hub.Config({
 </div>
 <ol>
 <li><p>Entropy Contraction for Finite Markov Kernels: Continuous-Time versus Discrete-Time<br />
+Pietro Caputo, Zongchen Chen, <b>Yuzhou Gu</b>, Yury Polyanskiy<br />
 <i>In preparation</i>
 </p>
 </li>
@@ -40,6 +41,7 @@ MathJax.Hub.Config({
 </p>
 </li>
 <li><p>Exact condensation thresholds for NAE-SAT and the hypergraph stochastic block model<br />
+<b>Yuzhou Gu</b><br />
 <i>In preparation</i>
 </p>
 </li>
@@ -164,7 +166,7 @@ Lijie Chen, Erik D. Demaine, <b>Yuzhou Gu</b>, Virginia Vassilevska Williams, Yi
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-23 14:10:14 EDT, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-08-28 09:26:38 EDT, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
