--- a/research.html
+++ b/research.html
@@ -30,9 +30,9 @@ MathJax.Hub.Config({
 <h1>Research</h1>
 </div>
 <ol>
-<li><p>Entropy Contraction for Finite Markov Kernels: Continuous-Time versus Discrete-Time<br />
+<li><p>Entropy Contractions in Markov Chains: Half-Step, Full-Step and Continuous-Time<br />
 Pietro Caputo, Zongchen Chen, <b>Yuzhou Gu</b>, Yury Polyanskiy<br />
-<i>In preparation</i>
+<a href="https://arxiv.org/abs/2409.07689" target=&ldquo;blank&rdquo;>[arXiv version]</a>
 </p>
 </li>
 <li><p>Tight Bounds for Noisy Computation of Threshold, Counting and Connectivity<br />
@@ -166,7 +166,7 @@ Lijie Chen, Erik D. Demaine, <b>Yuzhou Gu</b>, Virginia Vassilevska Williams, Yi
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-28 09:26:38 EDT, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-09-12 21:28:22 EDT, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
