--- a/research.html
+++ b/research.html
@@ -50,6 +50,12 @@ Pietro Caputo, Zongchen Chen, <b>Yuzhou Gu</b>, Yury Polyanskiy<br />
 <i>In preparation</i>
 </p>
 </li>
+<li><p>Log-concave Sampling over a Convex Body with a Barrier: a Robust and Unified Dikin Walk<br />
+<b>Yuzhou Gu</b>, Nikki Lijing Kuang, Yi-An Ma, Zhao Song, Lichen Zhang<br />
+<i>Conference on Neural Information Processing Systems (NeurIPS) 2024</i><br />
+<a href="https://arxiv.org/abs/2410.05700" target=&ldquo;blank&rdquo;>[arXiv version]</a>
+</p>
+</li>
 <li><p>Community detection in the hypergraph stochastic block model and reconstruction on hypertrees<br />
 <b>Yuzhou Gu</b>, Aaradhya Pandey<br />
 <i>Conference on Learning Theory (COLT) 2024</i><br />
@@ -166,7 +172,7 @@ Lijie Chen, Erik D. Demaine, <b>Yuzhou Gu</b>, Virginia Vassilevska Williams, Yi
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-09-18 17:36:19 EDT, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-10-11 11:21:48 EDT, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
