--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ New York University
 </p>
 <p>Email: [first name][last name]@nyu.edu<br />
 </p>
-<p>Curriculum vitae: <a href="data/cv-academia.pdf" target=&ldquo;blank&rdquo;>[CV]</a>
+<p>Curriculum vitae: <a href="data/cv-industry.pdf" target=&ldquo;blank&rdquo;>[CV]</a>
 </p>
 <p>Photo credit: Dan Komoda / Institute for Advanced Study
 </p>
@@ -69,7 +69,7 @@ Massachusetts Institute of Technology
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-11 11:21:48 EDT, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-10 20:21:38 BST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
