--- a/research.html
+++ b/research.html
@@ -30,14 +30,22 @@ MathJax.Hub.Config({
 <h1>Research</h1>
 </div>
 <ol>
-<li><p>Entropy Contractions in Markov Chains: Half-Step, Full-Step and Continuous-Time<br />
-Pietro Caputo, Zongchen Chen, <b>Yuzhou Gu</b>, Yury Polyanskiy<br />
-<a href="https://arxiv.org/abs/2409.07689" target=&ldquo;blank&rdquo;>[arXiv version]</a>
+<li><p>Evolution of Information in Interactive Decision Making: A Case Study for Multi-Armed Bandits<br />
+<b>Yuzhou Gu</b>, Yanjun Han, Jian Qian<br />
+<i>Preprint</i><br />
+<a href="https://arxiv.org/abs/2503.00273" target=&ldquo;blank&rdquo;>[arXiv version]</a>
 </p>
 </li>
-<li><p>Tight Bounds for Noisy Computation of Threshold, Counting and Connectivity<br />
+<li><p>Entropy Contractions in Markov Chains: Half-Step, Full-Step and Continuous-Time<br />
+Pietro Caputo, Zongchen Chen, <b>Yuzhou Gu</b>, Yury Polyanskiy<br />
+<i>Electronic Journal of Probability, 30:1-29, 2025</i><br />
+<a href="https://projecteuclid.org/journals/electronic-journal-of-probability/volume-30/issue-none/Entropy-contractions-in-Markov-chains--Half-step-full-step/10.1214/25-EJP1372.full" target=&ldquo;blank&rdquo;>[journal version]</a> <a href="https://arxiv.org/abs/2409.07689" target=&ldquo;blank&rdquo;>[arXiv version]</a>
+</p>
+</li>
+<li><p>Tight Bounds for Noisy Computation of High-Influence Functions, Connectivity, and Threshold<br />
 <b>Yuzhou Gu</b>, Xin Li, Yinzhan Xu<br />
-<i>Submitted</i>
+<i>Conference on Learning Theory (COLT) 2025</i><br />
+<a href="https://proceedings.mlr.press/v291/gu25a.html" target=&ldquo;blank&rdquo;>[conference version]</a> <a href="https://arxiv.org/abs/2502.04632" target=&ldquo;blank&rdquo;>[arXiv version]</a>
 </p>
 </li>
 <li><p>Exact condensation thresholds for NAE-SAT and the hypergraph stochastic block model<br />
@@ -48,6 +56,12 @@ Pietro Caputo, Zongchen Chen, <b>Yuzhou Gu</b>, Yury Polyanskiy<br />
 <li><p>Robust reconstruction on trees revisited<br />
 <b>Yuzhou Gu</b>, Yury Polyanskiy<br />
 <i>In preparation</i>
+</p>
+</li>
+<li><p>Binary Hypothesis Testing for Softmax Models and Leverage Score Models<br />
+<b>Yuzhou Gu</b>, Zhao Song, Junze Yin.<br />
+<i>International Conference on Machine Learning (ICML) 2025</i><br />
+<a href="https://arxiv.org/abs/2405.06003" target=&ldquo;blank&rdquo;>[arXiv version]</a>
 </p>
 </li>
 <li><p>Log-concave Sampling over a Convex Body with a Barrier: a Robust and Unified Dikin Walk<br />
@@ -172,7 +186,7 @@ Lijie Chen, Erik D. Demaine, <b>Yuzhou Gu</b>, Virginia Vassilevska Williams, Yi
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-11 11:21:48 EDT, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-10 20:21:38 BST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
