--- a/awards.html
+++ b/awards.html
@@ -47,7 +47,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-11 11:21:48 EDT, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-08-10 20:21:38 BST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
